packages/typ/tests/fixtures/diagnostics/0791_polyvar_call_payload_mismatch_04.ml
let read_delta : [ `A of int ] -> int = function
  | `A x -> x

let _ = read_delta (`A true)
